--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Chiranth D V</h1>
     <p>Hello good morning</p>
+    <img src="">
+    <h3></h3>
+    <a href=""></a>
 </body>
 </html>
