--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sample code website</title>
 </head>
 <body>
-    
+    <h1>Chiranth D V</h1>
+    <p>I am not a coder</p>
 </body>
 </html>
